// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Render a single author 1`] = `
<div>
  <a
    href="/profile/alexandra-frean"
    role="link"
  >
    Alexandra Frean
  </a>
</div>
`;

exports[`2. Render a given section colour 1`] = `
<style>
{
  "IS1": {
    "color": "blue",
  },
}
</style>

<div>
  <a
    className="IS1"
    href="/profile/alexandra-frean"
    role="link"
  >
    Alexandra Frean
  </a>
</div>
`;

exports[`3. Render an author with given styles 1`] = `
<style>
{
  "IS1": {
    "color": "red",
  },
}
</style>

<div>
  <a
    className="IS1"
    href="/profile/alexandra-frean"
    role="link"
  >
    Alexandra Frean
  </a>
</div>
`;
